--- a/public/style.css
+++ b/public/style.css
@@ -5,3 +5,82 @@ body{
 img{
   height: 200px;
 }
+body{
+  background-image: url('img/coffeebackground.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+h1, h3{
+  font-family: "Sofia", sans-serif;
+}
+h1{
+  font-size: 6em;
+}
+h3{
+  font-size: 3em;
+}
+.container2{
+  width: auto;
+  text-align: center;
+}
+
+.input{
+  float: left;
+  width: 100%;
+  text-align: center;
+  /* border: 1px solid black; */
+}
+
+.sendorder{
+float: left;
+width: 100%;
+margin-bottom: 1em;
+/* border: 1px solid black; */
+}
+
+.tea{
+  float: left;
+  width: 32%;
+  /* border: 1px solid black; */
+}
+
+.coffee{
+  float: left;
+  width: 32%;
+  /* border: 1px solid black; */
+}
+
+.choc{
+  float: left;
+  width: 32%;
+  /* border: 1px solid black; */
+}
+
+
+button{
+  display:inline-block;
+  padding:0.7em 1.4em;
+  margin:1em 0.3em 0.3em 0;
+  border-radius:1em;
+  box-sizing: border-box;
+  text-decoration:none;
+  font-family:'Roboto',sans-serif;
+  text-transform:uppercase;
+  font-weight:400;
+  color:#FFFFFF;
+  background-color:#3369ff;
+  box-shadow:inset 0 -0.6em 0 -0.35em rgba(0,0,0,0.17);
+  text-align:center;
+  position:relative;
+}
+
+button:active{
+  top:0.1em;
+}
+
+@media all and (max-width:30em){
+  a.button6{
+  display:block;
+  margin:0.4em auto;
+}
+}
