--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -24,7 +24,7 @@
                 <% if (user.local.email) { %>
                     <p>
                         <strong>id</strong>: <%= user._id %><br>
-                        <strong>email</strong>: <%= user.local.email %><br>
+                        <strong>Name</strong>: <%= user.local.email %><br>
                         <strong>password</strong>: <%= user.local.password %>
                         <p id="user"><%= user.local.email %></p>
                     </p>
